kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-frontend-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hybrid-api-front-service
            port:
              number: 80
  - host: monsite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hybrid-api-front-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-backend-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/hybrid-api
        pathType: Prefix
        backend:
          service:
            name: hybrid-api-backend-service
            port:
              number: 8081
  - host: api.monsite.com
    http:
      paths:
      - path: /api/hybrid-api
        pathType: Prefix
        backend:
          service:
            name: hybrid-api-backend-service
            port:
              number: 8081


#-------------------------------------------
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-app-frontend-ingress
# spec:
#   rules:
#   - host: monsite.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-front-service
#             port:
#               number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-app-backend-ingress
# spec:
#   rules:
#   - host: api.monsite.com
#     http:
#       paths:
#       - path: /api/hybrid-api
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-backend-service
#             port:
#               # Le port du service, qui doit correspondre au port d'écoute du service
#               number: 8081

#--------------------------------------------------

# --- donne une erreur 405 avec ip=127.0.0.1 dans /etc/hosts
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-app-backend-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - host: api.monsite.com
#       http:
#         paths:
#           - path: /api/hybrid-api/auth
#             pathType: Prefix
#             backend:
#               service:
#                 name: hybrid-api-backend-service
#                 port:
#                   number: 8081




# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-app-ingress
# spec:
#   rules:
#   - host: local.dev
#     http:
#       paths:
#       # Règle pour le frontend Angular.
#       # L'Ingress redirigera toutes les requêtes
#       # commençant par "/" vers ce service.
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-front-service
#             port:
#               number: 80
#       # Règle pour le backend Spring Boot.
#       # L'Ingress redirigera toutes les requêtes
#       # commençant par "/api/hybrid-api" vers ce service.
#       - path: /api/hybrid-api
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-backend-service
#             port:
#               number: 8081
